force-app/main/default/staticresources/python/Disappear/src/objects/FPR_Cycle__c.object
<CustomObject>
    <description>record name will be PubId-{0000000}-FPRCycle-{00}</description>
    <fields>
        <fullName>FPR_Cycle_Num__c</fullName>
        <label>FPR Cycle Num</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incremental_FPR_Cycle_c__c</fullName>
        <label>Incremental FPR Cycle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Publication__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Publication</label>
        <referenceTo>Publication__c</referenceTo>
        <relationshipLabel>FPR Cycles</relationshipLabel>
        <relationshipName>FPR_Cycles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SiebelRowId__c</fullName>
        <externalId>true</externalId>
        <label>SiebelRowId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>FPR Cycle</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Publication__c</field>
            <operation>equals</operation>
            <value>Pub-Id-055069</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>FPR_Cycle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FPR Cycles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>